Add login method to authenticate users
