# models/authentication_response.go
@@ -1,0 +1,167 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// AuthenticationResponse authentication response
+//
+// swagger:model AuthenticationResponse
+type AuthenticationResponse struct {
+
+	// token
+	Token string `json:"token,omitempty"`
+
+	// user
+	User *AuthenticationResponseUser `json:"user,omitempty"`
+}
+
+// Validate validates this authentication response
+func (m *AuthenticationResponse) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateUser(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *AuthenticationResponse) validateUser(formats strfmt.Registry) error {
+	if swag.IsZero(m.User) { // not required
+		return nil
+	}
+
+	if m.User != nil {
+		if err := m.User.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("user")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("user")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// ContextValidate validate this authentication response based on the context it is used
+func (m *AuthenticationResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateUser(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *AuthenticationResponse) contextValidateUser(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.User != nil {
+
+		if swag.IsZero(m.User) { // not required
+			return nil
+		}
+
+		if err := m.User.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("user")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("user")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *AuthenticationResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *AuthenticationResponse) UnmarshalBinary(b []byte) error {
+	var res AuthenticationResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
+
+// AuthenticationResponseUser authentication response user
+//
+// swagger:model AuthenticationResponseUser
+type AuthenticationResponseUser struct {
+
+	// active
+	Active bool `json:"active,omitempty"`
+
+	// email
+	Email string `json:"email,omitempty"`
+
+	// first name
+	FirstName string `json:"firstName,omitempty"`
+
+	// last name
+	LastName string `json:"lastName,omitempty"`
+
+	// phone number
+	PhoneNumber string `json:"phoneNumber,omitempty"`
+
+	// role
+	Role string `json:"role,omitempty"`
+
+	// user id
+	UserID string `json:"user_id,omitempty"`
+}
+
+// Validate validates this authentication response user
+func (m *AuthenticationResponseUser) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this authentication response user based on context it is used
+func (m *AuthenticationResponseUser) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *AuthenticationResponseUser) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *AuthenticationResponseUser) UnmarshalBinary(b []byte) error {
+	var res AuthenticationResponseUser
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
